Removed unused interface for ActionBar since AppbarLayout with Toolbar is being implemented

--- a/app/src/main/res/layout/fragment_topic_list.xml
+++ b/app/src/main/res/layout/fragment_topic_list.xml
@@ -22,6 +22,7 @@
         </android.support.v4.widget.NestedScrollView>
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_topics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -31,8 +32,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
+                android:elevation="4dp"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:layout_scrollFlags="scroll|enterAlways"
+                app:layout_scrollFlags="scroll"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
         </android.support.design.widget.AppBarLayout>
     </android.support.design.widget.CoordinatorLayout>
