--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -46,7 +46,7 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:text="@{topic.title}"
-            android:textSize="16sp"
+            android:textSize="@dimen/font_size_topic_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guide_topic_picture"
             app:layout_constraintTop_toTopOf="parent"
@@ -56,8 +56,10 @@
             android:id="@+id/topic_rate_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/content_description_thumb_down"
             android:src="@drawable/ic_thumb_down_black_24dp"
+            android:tint="@color/colorVoteDown"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/topic_title" />
@@ -67,8 +69,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/content_description_thumb_up"
             android:src="@drawable/ic_thumb_up_black_24dp"
+            android:tint="@color/colorVoteUp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/topic_rate_down"
             app:layout_constraintTop_toBottomOf="@id/topic_title" />
@@ -79,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="@{String.valueOf(topic.rating)}"
-            android:textSize="20sp"
+            android:textSize="@dimen/font_size_topic_rating"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/topic_rate_up"
             app:layout_constraintStart_toEndOf="@+id/topic_rating"
@@ -90,9 +94,9 @@
             android:id="@+id/topic_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="4dp"
             android:text="@string/title_rating"
-            android:textSize="20sp"
+            android:textSize="@dimen/font_size_topic_rating"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/topic_rating_value"
             app:layout_constraintHorizontal_bias="1"
