WIP:-Implementing remove on swipe

--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -19,6 +19,7 @@
         android:paddingBottom="8dp"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+        android:background="@color/almostWhite"
         android:paddingTop="8dp">
 
         <android.support.constraint.Guideline
