--- a/app/src/main/res/values/strings_topic.xml
+++ b/app/src/main/res/values/strings_topic.xml
@@ -4,4 +4,6 @@
     <string name="content_description_thumb_up">Press to up-vote</string>
     <string name="content_description_thumb_down">Press to down-vote</string>
     <string name="title_rating">Rating</string>
+
+    <string name="action_delete">Delete</string>
 </resources>
