--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="colorVoteUp">#60B060</color>
     <color name="colorVoteDown">#EE4040</color>
+
+    <color name="bg_row_background">#DD3030</color>
+    <color name="almostWhite">#FEFEFE</color>
 </resources>
