--- a/app/src/main/res/values/dimens_topic_list.xml
+++ b/app/src/main/res/values/dimens_topic_list.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="font_size_topic_rating">14sp</dimen>
     <dimen name="font_size_topic_title">16sp</dimen>
+    <dimen name="font_size_topic_delete">18sp</dimen>
+
+    <dimen name="padding_horizontal_item_topic">8dp</dimen>
 </resources>
