Implemented remove-on-swipe for topics

--- a/app/src/main/res/layout/item_topic_swipable.xml
+++ b/app/src/main/res/layout/item_topic_swipable.xml
@@ -20,11 +20,13 @@
             android:id="@+id/view_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center_vertical|end"
             android:paddingStart="@dimen/padding_horizontal_item_topic"
             android:paddingEnd="@dimen/padding_horizontal_item_topic"
             android:drawableEnd="@drawable/ic_delete_white_24dp"
+            android:drawablePadding="@dimen/padding_drawable_item_delete"
             android:text="@string/action_delete"
+            android:textAllCaps="true"
             android:textSize="@dimen/font_size_topic_delete"
             android:textColor="@color/almostWhite"
             android:background="@color/bg_row_background"
