--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -15,11 +15,11 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/almostWhite"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:paddingBottom="8dp"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-        android:background="@color/almostWhite"
         android:paddingTop="8dp">
 
         <android.support.constraint.Guideline
@@ -27,17 +27,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.15" />
+            app:layout_constraintGuide_percent="0.10" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guide_topic_swipe_to_remove"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.90" />
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/content_description_title"
-            android:src="@drawable/ic_group_work_black_24dp"
+            android:src="@drawable/ic_talk_grey_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guide_topic_picture"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/icon_action_swipe"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/content_description_swipe_horizontal"
+            android:src="@drawable/ic_swap_horizontal_grey_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/guide_topic_swipe_to_remove"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -48,7 +67,7 @@
             android:maxLines="2"
             android:text="@{topic.title}"
             android:textSize="@dimen/font_size_topic_title"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guide_topic_swipe_to_remove"
             app:layout_constraintStart_toEndOf="@id/guide_topic_picture"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Some quite long text to see how it is displayed" />
@@ -62,7 +81,7 @@
             android:src="@drawable/ic_thumb_down_black_24dp"
             android:tint="@color/colorVoteDown"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guide_topic_swipe_to_remove"
             app:layout_constraintTop_toBottomOf="@id/topic_title" />
 
         <ImageButton
