--- a/app/src/main/res/values/dimens_topic_list.xml
+++ b/app/src/main/res/values/dimens_topic_list.xml
@@ -3,6 +3,7 @@
     <dimen name="font_size_topic_rating">14sp</dimen>
     <dimen name="font_size_topic_title">16sp</dimen>
     <dimen name="font_size_topic_delete">18sp</dimen>
+    <dimen name="font_size_topic_create">16sp</dimen>
 
     <dimen name="padding_16">16dp</dimen>
 
