--- a/app/src/main/res/layout/fragment_topic_create.xml
+++ b/app/src/main/res/layout/fragment_topic_create.xml
@@ -14,9 +14,9 @@
             android:fillViewport="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <include layout="@layout/content_topic_create"
+            <include
                 android:id="@+id/root_topic_create"
-                />
+                layout="@layout/content_topic_create" />
 
         </android.support.v4.widget.NestedScrollView>
 
@@ -32,7 +32,14 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="4dp"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:contentInsetEnd="0dp"
+                app:contentInsetStart="0dp"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+                <include layout="@layout/toolbar_topic_create"
+                    android:id="@+id/toolbar_content"
+                    />
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
     </android.support.design.widget.CoordinatorLayout>
