--- a/app/src/main/res/values/dimens_topic_list.xml
+++ b/app/src/main/res/values/dimens_topic_list.xml
@@ -5,6 +5,8 @@
     <dimen name="font_size_topic_delete">18sp</dimen>
     <dimen name="font_size_topic_create">16sp</dimen>
 
+    <dimen name="font_size_toolbar_title">20sp</dimen>
+
     <dimen name="padding_16">16dp</dimen>
 
     <dimen name="padding_horizontal_item_topic">8dp</dimen>
