--- a/app/src/main/res/layout/fragment_topic_list.xml
+++ b/app/src/main/res/layout/fragment_topic_list.xml
@@ -3,25 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <import type="android.databinding.ObservableInt"/>
+
+        <variable
+            name="itemsCount"
+            type="ObservableInt"/>
+    </data>
+
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".main.ui.TopicListFragment">
 
         <!--<android.support.v4.widget.NestedScrollView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:fillViewport="true"-->
-            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:fillViewport="true"-->
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_topics"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                tools:listitem="@layout/item_topic" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_topics"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/item_topic" />
 
         <!--</android.support.v4.widget.NestedScrollView>-->
 
@@ -36,22 +44,29 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 android:elevation="4dp"
-                app:layout_scrollFlags="scroll"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                app:contentInsetEnd="@dimen/toolbar_inset_end"
+                app:contentInsetStart="@dimen/toolbar_inset_start"
+                app:layout_scrollFlags="scroll"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                <include
+                    android:id="@+id/toolbar_content"
+                    layout="@layout/toolbar_topic_list"
+                    app:itemsCount="@{itemsCount}"
+                    />
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_topic_create"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/padding_16"
+            android:layout_marginEnd="@dimen/padding_16"
             android:src="@drawable/ic_add_white_24dp"
             app:layout_anchor="@id/rv_topics"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_anchorGravity="bottom|end"
-            android:layout_marginEnd="@dimen/padding_16"
-            android:layout_marginBottom="@dimen/padding_16"
-            />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </android.support.design.widget.CoordinatorLayout>
 </layout>
