--- a/app/src/main/res/values/dimens_topic_list.xml
+++ b/app/src/main/res/values/dimens_topic_list.xml
@@ -6,9 +6,18 @@
     <dimen name="font_size_topic_create">16sp</dimen>
 
     <dimen name="font_size_toolbar_title">20sp</dimen>
+    <dimen name="font_size_toolbar_title_min">14sp</dimen>
 
     <dimen name="padding_16">16dp</dimen>
 
+    <dimen name="width_items_count">36dp</dimen>
+
+    <dimen name="toolbar_inset_start">16dp</dimen>
+    <dimen name="toolbar_inset_end">16dp</dimen>
+
+    <dimen name="corner_radius_topics_count">24dp</dimen>
+    <dimen name="padding_vertical_topics_count">3dp</dimen>
+    <dimen name="padding_horizontal_topics_count">6dp</dimen>
     <dimen name="padding_horizontal_item_topic">8dp</dimen>
     <dimen name="padding_drawable_item_delete">@dimen/padding_16</dimen>
 </resources>
