--- a/app/src/main/res/values/strings_topic_list.xml
+++ b/app/src/main/res/values/strings_topic_list.xml
@@ -8,6 +8,7 @@
 
     <string name="title_topic_list">Top topics</string>
 
+    <string name="action_item_deleted">Item deleted</string>
     <string name="action_delete">Delete</string>
 
     <string name="error_topic_with_id_not_found">Topic with id %1$d\nwas not found</string>
